// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkeletonPulse Snapshots No props 1`] = `
<div
  className="sc-bdfBwQ hLTJHd"
/>
`;

exports[`SkeletonPulse Snapshots with className 1`] = `
<div
  className="sc-bdfBwQ hLTJHd className"
/>
`;
